Finish most content

--- a/session-n-latex/example/main.tex
+++ b/session-n-latex/example/main.tex
@@ -80,4 +80,15 @@
       +\epsilon_0\frac{\partial\mathbf{E}}{\partial t}\bigg)
   \]
 
+\subsection*{Derivative of Cosine}
+
+\begin{align*}
+  \frac{d}{d\theta}\cos\theta
+  &=\frac{d}{d\theta}\frac12(e^{j\theta} + e^{-j\theta})\\
+  &=\frac12(je^{j\theta}-je^{-j\theta})\\
+  &=\frac{j}2(e^{j\theta}-e^{-j\theta})\\
+  &=-\frac1{2j}(e^{j\theta}-e^{-j\theta})\\
+  &=-\sin\theta
+\end{align*}
+
 \end{document}
